# plutus-pioneer-program

./: .gitignore  README.md
.devcontainer/: Dockerfile
code/: cabal.project
code/DecentralizedTix/: DecentralizedTix.cabal  README.md
code/DecentralizedTix/assets/: value35.json
code/DecentralizedTix/assets/json/: purchase.json
code/DecentralizedTix/scripts/: burn-user.sh  create-key-pair.sh  fund-wallet.sh  mint-user.sh  query-address.sh  query-tip.sh  wrangle-the-utxos.sh
code/DecentralizedTix/scripts/event/: burn.sh  mint.sh  notes.txt
code/DecentralizedTix/scripts/ticket/: burn.sh  collect-gift-extra.sh  collect-gift.sh  make-gift.sh  mint-extra.sh  mint.sh  notes.txt  purchase-ticket.sh  send-funds-to-script.sh
code/DecentralizedTix/scripts/ticketCreator/: burn.sh  mint.sh  notes.txt
code/DecentralizedTix/scripts/user/: burn.sh  mint.sh  notes.txt
code/DecentralizedTix/scripts/vesting/: give.sh  grab.sh  grab35.sh  notes.txt  purchase-ticket.sh  purchase.sh  send-fund-to-script.sh  send-funds-to-script.sh
code/DecentralizedTix/src/: EventNFT.hs  Main.hs  NFT.hs  PVesting.hs  ParameterizedVesting.hs  Signed.hs  ThirtyFiveTyped.hs  TicketCreatorNFT.hs  TicketNFT.hs  User.hs  UserNFT.hs
code/Week02/homework/: Homework1.hs  Homework2.hs
