cabal-version:      3.4
name:               decentralizedTix
version:            0.1.0.0
author:             A Torres
maintainer:         atorres@thecodeofarms.com
license:            BSD-3-Clause
build-type:         Simple

common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import:             common-all
    hs-source-dirs:     src
    exposed-modules:    EventNFT
                        Main
                        ParameterizedVesting
                        TicketNFT
                        User